Export evaluations alphabetically